
2009-06-03  Lynn Garren

	* HepMC/HepMCDefs.h: New header containing HEPMC_HAS_UNITS and 
	similar macros so users can check for various code features.  
	HepMC/GenEvent.h includes HepMCDefs.h.
	* HepMC/Version.h: Use new HEPMC_VERSION macro.

	* src/CommonIO.cc: add the capability to process IO_GenEvent ascii
	output produced by HepMC 2.05. (Extra information is ignored.)
	
	* src/IO_Ascii.cc: fix error message in write_particle_data

  --------------------------  HepMC-2.04.01  --------------------------

2008-12-15  Lynn Garren
	
	* src/CommonIO.cc: add space requested by -Wextra 
	The -Wextra flag is not a default compiler flag, request it with
	configure ... CXXFLAGS="-Wextra"

2008-12-11  Lynn Garren

	* test/testHepMCIteration.cc.in: add loop over children to the test
	
	* src/IO_Ascii.cc, IO_GenEvent.cc: fix error messages

2008-06-24  Lynn Garren

        * fio/IO_HEPEVT.cc: bug fix for inconsistency in HWHGUP
        see https://savannah.cern.ch/bugs/?38173 for details

  --------------------------  HepMC-2.04.00  --------------------------

2008-06-04  Lynn Garren

	* doc/HepMC2_user_manual.tex: expand description of Ascii IO format

2008-05-29  Lynn Garren
	
	* configure.ac: Use libtool versioning for libraries

2008-05-27  Lynn Garren
	
	* configure.ac: Throw an error immediately if units are not specified.

  --------------------------  HepMC-2.04.00.beta2  --------------------------

2008-05-21  Lynn Garren
	
	* HepMC/GenEvent.h: Duplicate the existing constructors with new 
	constructors that have momentum and length as the first 2 arguments.

	* examples: all examples except example_BuildEventFromScratch, 
        testHerwigCopies, and testPythiaCopies use default units
	
	* HepMC/IO_GenEvent.h: add use_input_units() method
	This method is needed ONLY if a) the input stream has no 
	unit information and b) it is known that the units of the input 
	stream do not match the default units.

2008-05-20  Lynn Garren

	* revamp Units design completely