@@ -182,7 +182,7 @@ information content of Ref.~\cite{Boos:2001cv} (run
 information---pertaining to a collection of events---is also specified
 in that document and is not addressed in HepMC).  }
 
-\begin{figure}[h]
+\begin{figure}[ht]
   \begin{center}
     \Ovalbox{\begin{minipage}{5in}\begin{small}
         \begin{tabular}{rcl}
@@ -231,7 +231,7 @@ and its descendants) may be examined or modified without having to
 interpret complex parent/child relationship codes or re-shuffle the rest 
 of the event record.
 
-\begin{figure}[h]
+\begin{figure}[ht]
   \begin{center}
      \parbox[c]{55mm}{\includegraphics[height=45mm,clip=]
        {physicist_visualization.eps}}
@@ -1138,7 +1138,7 @@ and associated with the vertex IO.
 In this way, each particle appears only once in the Ascii listing.
 An example of the format written to a file is shown in Figure~\ref{ascii_format}.
 
-\begin{figure}[h]
+\begin{figure}[ht]
   \begin{center}
 {\tiny \begin{verbatim}
 HepMC::Version 2.04.00 
@@ -1320,7 +1320,7 @@ All examples use IO\_GenEvent instead of the deprecated IO\_Ascii.
 
 IO examples are shown in Figures \ref{read_ascii} and \ref{write_ascii}.
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \caption[IO\_GenEvent exmple]{\label{read_ascii} Reading HepMC events from a file. }
 {\small \begin{verbatim}
 // specify an input file
@@ -1339,7 +1339,7 @@ while ( evt ) {
 \end{verbatim}}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \caption[IO\_HEPEVT and IO\_GenEvent exmple]
 {\label{write_ascii} Convert events from the HEPEVT common block 
           to HepMC format and write them to a file. }
