@@ -1,0 +1,42 @@
+________________________________________________________________________________
+GenEvent: #1 ID=20 SignalProcessGenVertex Barcode: -3
+ Momenutm units:     GEV     Position units:      MM
+ Entries this event: 4 vertices, 8 particles.
+ Beam Particles are not defined.
+ RndmState(0)=
+ Wgts(0)=
+ EventScale -1 [energy] 	 alphaQCD=-1	 alphaQED=-1
+                                    GenParticle Legend
+        Barcode   PDG ID      ( Px,       Py,       Pz,     E ) Stat  DecayVtx
+________________________________________________________________________________
+GenVertex:       -1 ID:    0 (X,cT):0
+ I: 1     10001     2212 +0.00e+00,+0.00e+00,+7.00e+03,+7.00e+03   3        -1
+ O: 1     10003        1 +7.50e-01,-1.57e+00,+3.22e+01,+3.22e+01   3        -3
+GenVertex:       -2 ID:    0 (X,cT):0
+ I: 1     10002     2212 +0.00e+00,+0.00e+00,-7.00e+03,+7.00e+03   3        -2
+ O: 1     10004       -2 -3.05e+00,-1.90e+01,-5.46e+01,+5.79e+01   3        -3
+GenVertex:       -3 ID:    0 (X,cT):0
+ I: 2     10003        1 +7.50e-01,-1.57e+00,+3.22e+01,+3.22e+01   3        -3
+          10004       -2 -3.05e+00,-1.90e+01,-5.46e+01,+5.79e+01   3        -3
+ O: 2     10005       22 -3.81e+00,+1.13e-01,-1.83e+00,+4.23e+00   1
+          10006      -24 +1.52e+00,-2.07e+01,-2.06e+01,+8.59e+01   3        -4
+Vertex:       -4 ID:    0 (X,cT)=+1.20e-01,-3.00e-01,+5.00e-02,+4.00e-03
+ I: 1     10006      -24 +1.52e+00,-2.07e+01,-2.06e+01,+8.59e+01   3        -4
+ O: 2     10007        1 -2.44e+00,+2.88e+01,+6.08e+00,+2.96e+01   1
+          10008       -2 +3.96e+00,-4.95e+01,-2.67e+01,+5.64e+01   1
+________________________________________________________________________________
+
+dangling partners of particle 10001
+10005       22 231
+10001     2212 231
+all partners of particle 10001
+10001     2212 231
+10003        1 231
+10005       22 231
+dangling partners of particle 10002
+10006      -24 243
+10002     2212 243
+all partners of particle 10002
+10002     2212 243
+10004       -2 243
+10006      -24 243
