@@ -1,0 +1,35 @@
+#! /bin/bash
+# @configure_input@
+
+rm -f testFlow.out 
+./testFlow@EXEEXT@
+
+if [ "$?" -ne 0 ]
+then
+  exit 1;
+fi
+
+if [ ! -e testFlow.out ]
+then
+   echo "ERROR: testFlow.out does not exist"
+   exit 1;
+fi
+
+OS=`uname`
+case "$OS" in
+CYGWIN*)
+  cmd1=`sed 's/e+0/e+/g'  testFlow.out  | \
+     sed 's/e-0/e-/g'  -  | \
+	@DIFF_Q@ - @srcdir@/testFlow.output`
+  ;;
+*)
+  cmd1=`@DIFF_Q@ testFlow.out @srcdir@/testFlow.output`
+esac
+
+if [ -n "$cmd1" ]
+then
+  echo $cmd1
+  exit 1;
+fi
+
+exit 0;
