@@ -1,4 +1,10 @@
 
+2009-06-25  Lynn Garren
+
+	* HepMC/Flow.h: improve the syntax of the erase() method
+	* test/testFlow.cc: adding a test of the Flow class
+	see https://savannah.cern.ch/bugs/index.php?52240
+
 2009-06-03  Lynn Garren
 
 	* HepMC/HepMCDefs.h: New header containing HEPMC_HAS_UNITS and 
